test/sema/typeck/generic/assign-to-type-param-class.dora
class SomeClass[T]
impl[T] SomeClass[T] {
    fn f() { T = 10; }
}
